# uberxmhf

./: .gitignore  LICENSE  Makefile.am  Makefile.in  a.sh  alias.sh  amt.py  bochs.md  boot.S  boot.s  branches.md  configure.ac  control.py  debian.md  develop.md  first.groovy  gdt.c  hpt.c  hpto.c  hptw.c  indent.sh  kernel.c  kvm.sh  lhv-asm.S  lhv-console.c  lhv-ept.c  lhv-global.c  lhv-guest-asm.S  lhv-guest.c  lhv-keyboard.c  lhv-timer.c  lhv-user-asm.S  lhv-user.c  lhv-vmcs.c  lhv-vmx.c  lhv.c  libc_string.c  linker.ld  linksrc.sh  open-source.md  (+8 more)
.circleci/: config.yml  download.sh  env.sh  test2.py
.github/: build.sh
.github/workflows/: build.yml  pal_demo.yml  vmcs.yml
.jenkins/: Jenkinsfile  test2.py  test3.py
auto_barebone/: .gitignore  Makefile.am  a.sh  boot.s  configure.ac  debug-uart.c  debug-vga.c  debug.c  grub.cfg  kernel.c  lhv-asm.S  lhv-global.c  lhv-guest.c  lhv-mouse.c  lhv-pic.c  lhv-timer.c  lhv-user.c  lhv-vmcs.c  lhv-vmx.c  libc_stdio.c  libc_string.c  linker.ld  smp.c  spinlock.c
auto_barebone/include/: _paging.h  cpu.h  lhv-pic.h  lhv-vmcs-template.h  lhv-vmcs.h  page.h  shv_types.h  smp.h  xmhf.h
bug_016/: README.md
bug_025/: README.md
bug_031/: README.md
bug_036/: README.md
bug_037/: README.md
bug_046/: README.md  results.7z
bug_049/: README.md  merge_x86.py
bug_050/: README.md  a.diff
bug_051/: README.md
bug_052/: README.md
bug_053/: README.md  results.7z
bug_054/: README.md
bug_055/: README.md  results.7z
bug_056/: README.md
bug_057/: README.md
bug_058/: README.md  a.c  b.c  b.i  bug.txt
bug_059/: README.md  replace.py
bug_060/: README.md
bug_061/: README.md
bug_062/: README.md  results.7z  split.py
bug_063/: Jenkinsfile  README.md  test.py  test2.py
bug_064/: README.md  page.gdb
bug_065/: README.md
bug_066/: Makefile.1  README.md
bug_067/: README.md  intel_ucode_sha1.py
bug_068/: README.md  commits.py  commits.txt  feature_bug.md
bug_069/: README.md
bug_070/: README.md  grub-amd64.cfg  grub-i386.cfg
bug_071/: .gitignore  Makefile  README.md  main.c  standalone.c  startup.nsh
bug_072/: README.md
bug_073/: README.md
bug_074/: README.md
bug_075/: README.md
bug_076/: README.md
bug_077/: README.md
bug_078/: README.md  a.sh  b.diff
bug_079/: README.md  a.c  a1.c  cap.csv  cap.py  cap.txt  ctl.py  results.7z  vmcs_size.py
bug_080/: README.md
bug_081/: README.md  read_stack32.py  results.7z
bug_082/: README.md  lhv-97894439f.img.xz  results.7z
bug_083/: README.md
bug_084/: README.md  bug_216212.txt  lhv-231a25f7f.img.xz  lhv-80a91b614.img.xz  results.7z
bug_085/: README.md  a.s.32  b.s.16  bug_216234.txt  results.7z  xmhf64-dev-0596d7e0e.img.xz
bug_086/: README.md
bug_087/: README.md  bochsrc  bug_bochs.txt  bug_kvm.txt  bug_vmware.txt  c.img.xz  d.vmdk.xz  log_bochs.txt  serial_2540p.txt  serial_bochs.txt  serial_kvm.txt  serial_vmware.txt
bug_088/: README.md  bad1.txt  good1.txt
bug_089/: README.md
bug_090/: README.md  el.py  kvm1.txt
bug_090/event_logger/: .gitignore  Makefile  event_logger.c  event_logger.h  event_logger_fields.h  test_event_logger.c  xmhf.h
bug_091/: Makefile  README.md  a1.c  a2.c  bss_size.py  results.7z
bug_092/: README.md  results.7z
bug_093/: README.md  compare_3_kvm.txt  compare_3_vb.txt  compare_4_kvm.txt  compare_4_vb.txt  compare_5_vb.txt  entry_fail1.txt  results.7z  sample_vmcs2.txt
bug_094/: README.md  vmware.py
bug_095/: .gitignore  Makefile  README.md  ld_gc_demo.c  ld_gc_demo.lds  nm.diff  sl_size.py
bug_096/: README.md  linux_panic1.txt
bug_097/: .gitignore  Makefile  README.md  _txt_mtrrs.h  mtrr1.c  mtrr2.c  results.7z  tpm_symbols.txt
bug_098/: README.md
bug_099/: README.md
bug_100/: README.md
bug_101/: README.md
bug_102/: README.md
bug_103/: README.md  stack_trace1.txt
bug_104/: README.md  results.7z
bug_105/: README.md  c3.img.xz  results.7z  util_lmm2.diff
bug_106/: README.md  a1.c  a2.c  bug.txt  d3.diff  e8.diff  l4.diff  l6.diff  p7.diff  results.7z  v5.diff
bug_107/: README.md  results.7z
bug_108/: README.md
bug_109/: README.md
bug_110/: README.md
bug_111/: README.md  c.img.xz  kvm.txt  vmware.txt  x86_decode.py
bug_112/: README.md
bug_113/: README.md
bug_114/: README.md  nested.7z  nested.csv  nested2.7z  nested2.csv  nested3.csv  nested4.7z  palbench.sh  palbench2.sh  remove_nv.py  result.csv  sloccount.csv  sysbench.sh  sysbench2.sh  sysbench3.sh  sysbench4.sh  ubuntu.7z  ubuntu.csv
bug_114/nested2_scripts/: 0.sh  1b.sh  1k.sh  1w.sh  1x.sh  2bk.sh  2kk.sh  2wk.sh  2xk.sh
bug_114/nested3_scripts/: 0.sh  1k.sh  1x.sh  2bk.sh  2kk.sh  2wk.sh  2xk.sh  autotest.sh
bug_114/nested4_scripts/: .gitignore  0.sh  1b.sh  1k.sh  1w.sh  1x.sh  1xt.sh  2bk.sh  2kk.sh  2wk.sh  2xk.sh  2xkt.sh  autotest.sh  collect.py  collect_pal.py  collect_pal2.py  decompress.sh  u0.sh  u3.sh  u3t.sh  u6.sh  u6t.sh  u9.sh  u9t.sh
bug_115/: README.md
bug_116/: README.md  a1.c
bug_117/: README.md
bug_118/: README.md
bug_119/: README.md
bug_120/: README.md  tboot_bug.txt
bug_121/: README.md
bug_122/: README.md
gdb/: bl.gdb  continue.gdb  efi.gdb  nop.gdb  page.gdb  sl.gdb  x64_linux_sym.gdb  x64_rt_ap32.gdb  x64_rt_com.gdb  x64_sl_end.gdb
include/: _msr.h  _paging.h  _processor.h  _vmx.h  bitfield.h  cpu.h  euchk.h  hpt.h  lhv.h  smp.h  xmhf.h
old/: Makefile.in
(+485 files in other folders)
